home blog updates

--- a/vaf/templates/partials/_navbar.html
+++ b/vaf/templates/partials/_navbar.html
@@ -23,7 +23,8 @@
                     <ul class="nav navbar-nav navbar-nav-first">
                          <li><a href="/" class="smoothScroll">Home</a></li>
                          <li><a href="about" class="smoothScroll">About</a></li>
-                         <li><a href="blog" class="smoothScroll">Blog</a></li>
+                         <li><a href="/blog" class="smoothScroll">Blog</a></li>
+                         <li><a href="gallery" class="smoothScroll">Gallery</a></li>
                          <li><a href="contact" class="smoothScroll">Contact</a></li>
                     </ul>
 
