--- a/vaf/templates/partials/_footer.html
+++ b/vaf/templates/partials/_footer.html
@@ -43,8 +43,7 @@
                                           <li><a href="partners">Our Partners</a></li>
                                           <li><a href="testimonials">Testimonials</a></li>
                                           <li><a href="team">Team</a></li>
-                                          <li><a href="Gallery">Gallery</a></li>
-                                          <li><a href="testimonials">Testimonials</a></li>
+                                          <li><a href="gallery">Gallery</a></li>
                                           <li><a href="#">Terms & Conditions</a></li>
                                           <li><a href="#">Refund Policy</a></li>
                                      </ul>
