home vaflame upgrade

--- a/vaf/templates/gallery/gallery_list.html
+++ b/vaf/templates/gallery/gallery_list.html
@@ -38,7 +38,7 @@
       {% else %}
         <div class="col-md-12">
           
-          <p>No Plots listings Available</p>
+          <p>No Photos Available</p>
         </div>
       {% endif %}
 
