--- a/vaf/templates/partials/_footer.html
+++ b/vaf/templates/partials/_footer.html
@@ -37,7 +37,7 @@
                                      <p><a href="mailto:youremail.co">hello@youremail.co</a></p>
                                 </address>
   
-                                <div class="footer_menu">
+                                <div class="w3-hide footer_menu">
                                      <h2>Quick Links</h2>
                                      <ul>
                                           <li><a href="partners">Our Partners</a></li>
