--- a/vaf/templates/base.html
+++ b/vaf/templates/base.html
@@ -24,6 +24,7 @@
   <!-- Owl theme -->
   <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
   <!-- fonts -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{% static 'fonts/fontawesome-webfont.eot' %}">
   <link rel="stylesheet" href="{% static 'fonts/fontawesome-webfont.svg' %}">
   <link rel="stylesheet" href="{% static 'fonts/fontawesome-webfont.ttf' %}">
