--- a/vaf/templates/partials/_navbar.html
+++ b/vaf/templates/partials/_navbar.html
@@ -21,15 +21,60 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="/" class="smoothScroll">Home</a></li>
-                         <li><a href="about" class="smoothScroll">About</a></li>
-                         <li><a href="/blog" class="smoothScroll">Blog</a></li>
-                         <li><a href="gallery" class="smoothScroll">Gallery</a></li>
-                         <li><a href="contact" class="smoothScroll">Contact</a></li>
-                    </ul>
 
+                         <li
+                         {% if '/' == request.path %}
+                              class="nav-item active mr-3"
+                         {% else %}
+                              class="nav-item mr-3"
+                         {% endif %}
+                         >
+                         <a class="nav-link" href="{% url 'index' %}">Home</a>
+                         </li>
+                         
+                         <li
+                         {% if 'about' in request.path %}
+                           class="nav-item active mr-3"
+                         {% else %}
+                           class="nav-item mr-3"
+                         {% endif %}
+                         >
+                         <a class="nav-link" href="{% url 'about' %}">About</a>
+                         </li>
+
+                         <li
+                         {% if 'contact' in request.path %}
+                           class="nav-item active mr-3"
+                         {% else %}
+                           class="nav-item mr-3"
+                         {% endif %}
+                         >
+                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                         </li>
+                    </ul>
+                    
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#"><i class="fa fa-phone"></i> +65 2244 1100</a></li>
+                    <li
+                    {% if 'profile' in request.path %}
+                         class="nav-item active mr-3"
+                    {% else %}
+                         class="nav-item mr-3"
+                    {% endif %}
+                    >
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
+                    <li
+                    {% if 'dashboard' in request.path %}
+                         class="nav-item active mr-3"
+                    {% else %}
+                         class="nav-item mr-3"
+                    {% endif %}
+                    >
+                    <a class="nav-link" href="{% url 'dashboard' %}">
+                         [Dashboard]</a>
+                    </li>
+                   
+                        <li><a href="#"><i class="fa fa-phone"></i> +65 2244 1100</a></li>
                     </ul>
                </div>
                
