home booking errors

--- a/vaf/templates/accounts/dashboard.html
+++ b/vaf/templates/accounts/dashboard.html
@@ -11,7 +11,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">{{ user.username|capfirst }} Dashboard</h1>
-          <p class="lead">Manage your Kwela account</p>
+          <p class="lead">Manage your Vaflame account</p>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
     </table>
   </div>
   {% else %}
-    <p>You have not made any inquiries</p>
+    <p>You have not made any bookings</p>
   {% endif %}
 
   {% endblock %}
