--- a/vaf/templates/base.html
+++ b/vaf/templates/base.html
@@ -10,19 +10,23 @@
 
   <!-- w3.css -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-metro.css">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <!-- Lightbox -->
+  <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
   <!-- Custom -->
   <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %}">
   <!-- Owl Carousel -->
   <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
   <!-- Owl theme -->
   <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="{% static 'css/all.css' %}">
   <!-- fonts -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{% static 'fonts/fontawesome-webfont.eot' %}">
