--- a/vaf/templates/pages/index.html
+++ b/vaf/templates/pages/index.html
@@ -45,7 +45,16 @@
 
 </div>
 
-     
+ <div class="w3-card w3-yellow">
+      {% if partners %}
+          {% for partner in partners %}
+
+          {% endfor %}
+          <div class="col-md-12">
+               <p>No Partners Available</p>
+          </div>
+      {% endif %}
+ </div>
 
 
      <!-- FEATURE -->
@@ -141,6 +150,8 @@
      <section id="partner">
           <div class="container">
                <div class="row">
+                {% if partners %}
+                    {% for  partner in partners %}
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
@@ -151,11 +162,12 @@
                     <div class="col-md-3 col-sm-6">
                          <div class="team-thumb">
                               <div class="team-image">
-                                   <img src="images/author-image1.jpg" class="img-responsive" alt="">
+                                   <img src="{{ partner.photo.url }}" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
-                                   <h3>Mark Wilson</h3>
-                                   <span>I love Teaching</span>
+                                   <h3>{{ partner.first_name }}</h3>
+                                   <span>{{ partner.ministry_name }}</span>
+                                   <a href="{% url 'partner' partner.id %}" class="btn w3-btn w3-hover-green btn-block">More about {{partner.ministry_name}}</a>
                               </div>
                               <ul class="social-icon">
                                    <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
@@ -164,57 +176,11 @@
                               </ul>
                          </div>
                     </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image2.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Catherine</h3>
-                                   <span>Education is the key!</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-google"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
-                              </ul>
-                         </div>
+                    {% endfor %}
+                    <div class="col-md-12">
+                         <p>No Partners Available</p>
                     </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image3.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Jessie Ca</h3>
-                                   <span>I like Online Courses</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-envelope-o"></a></li>
-                                   <li><a href="#" class="fa fa-linkedin"></a></li>
-                              </ul>
-                         </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image4.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Andrew Berti</h3>
-                                   <span>Learning is fun</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-google"></a></li>
-                                   <li><a href="#" class="fa fa-behance"></a></li>
-                              </ul>
-                         </div>
-                    </div>
-
+                {% endif %}
                </div>
           </div>
      </section>
