--- a/vaf/templates/partials/_navbar.html
+++ b/vaf/templates/partials/_navbar.html
@@ -42,18 +42,11 @@
                          <a class="nav-link" href="{% url 'about' %}">About</a>
                          </li>
 
-                         <li
-                         {% if 'contact' in request.path %}
-                           class="nav-item active mr-3"
-                         {% else %}
-                           class="nav-item mr-3"
-                         {% endif %}
-                         >
-                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                         </li>
+                         
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}     
                     <li
                     {% if 'profile' in request.path %}
                          class="nav-item active mr-3"
@@ -63,19 +56,51 @@
                     >
                     <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
+                   
                     <li
                     {% if 'dashboard' in request.path %}
-                         class="nav-item active mr-3"
+                      class="nav-item active mr-3"
                     {% else %}
-                         class="nav-item mr-3"
+                      class="nav-item mr-3"
                     {% endif %}
                     >
-                    <a class="nav-link" href="{% url 'dashboard' %}">
-                         [Dashboard]</a>
+                      <a class="nav-link" href="{% url 'dashboard' %}">
+                      Welcome {{ user.username }} Dashboard  </a>
                     </li>
-                   
-                        <li><a href="#"><i class="fa fa-phone"></i> +65 2244 1100</a></li>
-                    </ul>
+                    <li class="nav-item mr-3">
+                      <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                      </a>
+                      <form action="{% url 'logout' %}" method="POST" id="logout">
+                        {% csrf_token %}
+                        <input type="hidden">
+                      </form>
+                    </li>
+                    {% else %}
+                    <li
+                    {% if 'register' in request.path %}
+                      class="nav-item active mr-3"
+                    {% else %}
+                      class="nav-item mr-3"
+                    {% endif %}
+                    >
+                      <a class="nav-link" href="{% url 'register' %}">
+                        <i class="fas fa-user-plus"></i> Register</a>
+                    </li>
+                    <li
+                    {% if 'login' in request.path %}
+                      class="nav-item active mr-3"
+                    {% else %}
+                      class="nav-item mr-3"
+                    {% endif %}
+                    >
+                      <a class="nav-link" href="{% url 'login' %}">
+                        <i class="fas fa-sign-in-alt"></i>
+        
+                        Login</a>
+                    </li>
+                  {% endif %}
+                </ul>
                </div>
                
 
