--- a/vaf/templates/partners/partner.html
+++ b/vaf/templates/partners/partner.html
@@ -5,93 +5,8 @@
 {% block title %} | Welcome {% endblock %}
 
 {% block content %}
-<div class="card mb-3">
-        <img class="card-img-top w3-quarter" src="{{ partner.team.photo.url }}" alt="">
-          <div class="card-body">
-            <h5 class="card-title">Property Realtor</h5>
-            <h6 class="text-secondary">{{ partner.team }}</h6>
-          </div>
-          </div>
-        <button class="w3-blue btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">Book To VIew</button>
-      </div>
-  <!-- Inquiry Modal -->
-  <div class="modal fade" id="inquiryModal" role="dialog">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header w3-theme-d5">
-              <h5 class="modal-title w3-theme-d5" id="inquiryModalLabel">Book The Truck</h5>
-            
-              <button type="button w3-button" class="close" data-dismiss="modal">
-                <span class="w3-text-white">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form action="{% url 'booking' %}" method="POST">
-                {% csrf_token %}
-                {% if user.is_authenticated %}
-                  <input type="hidden" name="user_id" value="{{ user.id }}">
-                {% else %}
-                  <input type="hidden" name="user_id" value="0">
-                {% endif %}
-                <input type="hidden" name="team_email" value="{{ partner.team.email }}">
-                <input type="hidden" name="partner_id" value="{{ partner.id }}">
-                <div class="form-group">
-                  <label for="property_name" class="col-form-label">Partner:</label>
-                  <input type="text" name="partner" class="form-control" value="{{ partner.title }}">
-                </div>
-                <div class="form-group">
-                  <label for="name" class="col-form-label">Name:</label>
-                  <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name }} {{ user.last_name }}" {% endif %} required>
-                </div>
-                <div class="form-group">
-                  <label for="email" class="col-form-label">Email:</label>
-                  <input type="email" name="email" class="form-control" {% if user.is_authenticated %} value="{{ user.email }}" {% endif %} required>
-                </div>
-                <div class="form-group">
-                    <label for="phone" class="col-form-label">Phone:</label>
-                    <input type="text" name="phone" class="form-control">
-                  </div>
-                <div class="form-group">
-                    <label for="address" class="col-form-label">Address:</label>
-                    <input type="text" name="address" class="form-control">
-                  </div>
-                <div class="form-group">
-                    <label for="ministry_name" class="col-form-label">Ministry name:</label>
-                    <input type="text" name="ministry_name" class="form-control">
-                  </div>
-                <div class="form-group">
-                    <label for="ministry_location" class="col-form-label">Ministry Location:</label>
-                    <input type="text" name="ministry_location" class="form-control">
-                  </div>
-                <div class="form-group">
-                    <label for="county" class="col-form-label">County:</label>
-                    <input type="text" name="county" class="form-control">
-                  </div>
-                <div class="form-group">
-                  <label for="phone" class="col-form-label">Phone:</label>
-                  <input type="text" name="phone" class="form-control">
-                </div>
-                <div class="form-group">
-                      <label for="booking_date" class="col-form-label">When you need the Truck:</label>
-                      <input type="date" name="booking_date" class="form-control">
-                    </div>
-                <div class="form-group">
-                    <label for="return_date" class="col-form-label">Date when you return</label>
-                    <input type="date" name="return_date" class="form-control">
-                  </div>
-                <div class="form-group">
-                  <label for="description" class="col-form-label">Please fill in any other details here:</label>
-                  <textarea name="description" class="form-control"></textarea>
-                </div>
-                <hr>
-                <input type="submit" value="Send" class="btn btn-block btn-secondary">
-              </form>
-              <p> We will call you back to agree on a date for viewing this piece of land</p>
-              <p>During viewing all other questions that related to this piece will be answered.</p>
-              <p>Fill free to send us a message </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+<h1>
+  Partner .....
+</h1>
     {% endblock %}
