--- a/vaf/templates/base.html
+++ b/vaf/templates/base.html
@@ -11,7 +11,12 @@
   <!-- w3.css -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-metro.css">
-
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-win8.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-highway.css">
+  
+  
+  
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
