--- a/vaf/templates/partials/_navbar.html
+++ b/vaf/templates/partials/_navbar.html
@@ -41,6 +41,15 @@
                          >
                          <a class="nav-link" href="{% url 'about' %}">About</a>
                          </li>
+                         <li
+                         {% if 'booking' in request.path %}
+                         class="nav-item active mr-3"
+                          {% else %}
+                            class="nav-item mr-3"
+                          {% endif %}
+                          >
+                          <a class="nav-link" href="{% url 'booking' %}">Booking</a>
+                          </li>
 
                          
                     </ul>
