--- a/vaf/templates/partials/_navbar.html
+++ b/vaf/templates/partials/_navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+    </head>
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation" style="width: 100%;">
           <div class="container">
@@ -19,7 +20,7 @@
                </div>
 
                <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
+               <div class="w3-white collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
 
                          <li
@@ -41,6 +42,7 @@
                          >
                          <a class="nav-link" href="{% url 'about' %}">About</a>
                          </li>
+                        
                          <li
                          {% if 'booking' in request.path %}
                          class="nav-item active mr-3"
@@ -55,7 +57,16 @@
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}     
+                    {% if user.is_authenticated %}  
+                    <li
+                    {% if 'testimonial' in request.path %}
+                         class="nav-item active mr-3"
+                    {% else %}
+                         class="nav-item mr-3"
+                    {% endif %}
+                    >
+                    <a class="nav-link" href="{% url 'testimonial' %}">Testimonials</a>
+                    </li>   
                     <li
                     {% if 'profile' in request.path %}
                          class="nav-item active mr-3"
