--- a/vaf/templates/testimonial.html
+++ b/vaf/templates/testimonial.html
@@ -9,16 +9,16 @@
 
     <!-- Inquiry Modal -->
 <div class="card Jumbotron w3-margin w3-black mb-3">
-    <button class="w3-white w3-xlarge w3-round-xxlarge w3-center w3-hover-red  w3-btn w3-block" data-toggle="modal" data-target="#inquiryModal"> <h1 class="w3-jumbo w3-center">Partners Reviews</h1>
-        <h4>from all over the country</>
-        Create your testimony here
+    <button class="w3-white w3-xlarge w3-round-xxlarge w3-center w3-hover-red  w3-btn w3-block" data-toggle="modal" data-target="#inquiryModal"> <h1 class="w3-jumbo w3-center">Partners Testimonies</h1>
+       
+        <h4> Create your testimony here</h4>
     </button>
 </div>
     <div class="modal fade" id="inquiryModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
         <div class="modal-header w3-win8-red">
-            <h5 class="modal-title w3-theme-d5" id="inquiryModalLabel">Testimonial forms</h5>
+            <h5 class="modal-title" id="inquiryModalLabel">Testimonial forms</h5>
         
             <button type="button" class="close" data-dismiss="modal">
             <span class="w3-text-white">&times;</span>
@@ -29,21 +29,16 @@
                 {% csrf_token %}
             
                 {% if user.is_authenticated %}
-                
-
+            
                     <input type="hidden" name="user_id" value="{{ user.id }}">
                 {% else %}
                     <input type="hidden" name="user_id" value="0">
                 {% endif %}
-             
+                <input type="hidden" name="testimonial_id" value="{{ testimonial.id }}">
                 <div class="form-group">
                 <label for="partner">Partner</label>
-                        <input type="text" name="partner" class="form-control" value="{{partner.first_name}}" required>
+                        <input type="text" name="partner" class="form-control" required>
                 </div>
-                <div class="form-group">
-                        <label for="date_posted" class="col-form-label">Post date: </label>
-                        <input type="date" name="date_posted" class="form-control">
-                      </div>
     
                 <div class="form-group">
                     <label for="testimony" class="col-form-label">Please fill in any other details here:</label>
@@ -59,38 +54,26 @@
         </div>
     </div>
 
-    {% if testimonials %}
-    <div class="w3-container">
-        <h2 class="w3-center">Testimonies</h2>
-       
-        <table class="w3-table">
-          <tr>
-            <th class="w3-camo-black"> Partner</th>
-            <th class="w3-camo-black">date Posted </th>
-            <th class="w3-camo-black">Message</th>
-          
-            
-          </tr>
-          
-          {% for testimonial in testimonials %}
-          <tr>
-            <td>{{testimonial.partner}}</td>
-            <td>{{testimonial.date.posted}}</td>
-            <td>{{testimonial.testimony}}</td>
-           
-          </tr>
-          
-          
-          {% endfor %}
-    {% else %}
-    
-    <p>THere are no testimonies</p>
-    
-    {% endif %}
-        </table>
-      </div>
-
-
+                                                <!-- TESTIMONIAL -->
+    <section id="testimonial">
+        <div class="container">
+             {% if testimonials %}
+                  <h2>Partner Testimonials </h2>
+                       {% for testimonial in testimonials %}
+                            <div class="w3-panel">             
+                                 <div class="w3-container ">
+                                      <h3 class="w3-left-align" >{{testimonial.partner}}</h3>
+                                      <p class="w3-left-align">{{testimonial.date_posted}}</p>
+                                      <img src="{{ testimonial.partner.profile.image.url }}" alt=" " class="w3-left w3-border w3-padding w3-circle" style="padding:2px; width:115px;">
+                                      <p class="w3-left-align">{{testimonial.testimony|safe}}</p>
+                                 </div>
+                            </div>
+                       {% endfor %}
+             {% else %}                                    
+             <p>There are no testimonies</p>
+            {% endif %}   
+        </div>
+    </section>
 
 {% endblock %}
 
